--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">BaroInternApp</string>
 
+    <!--  Toolbar -->
+    <string name="description_notification_icon">알림 아이콘 이미지</string>
+
     <!-- Dummy Data -->
     <string name="data_product_01_title">산지 한달된 선풍기 팝니다</string>
     <string name="data_product_01_introduction">이사가서 필요가 없어졌어요 급하게 내놓습니다</string>
