--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,27 @@
 <resources>
     <string name="app_name">BaroInternApp</string>
 
-    <!-- Common -->
+    <!--  Common  -->
     <string name="description_like_icon">좋아요 아이콘 이미지</string>
 
-    <!--  Toolbar -->
+    <!--  Toolbar  -->
     <string name="description_notification_icon">알림 아이콘 이미지</string>
 
-    <!--  MainActivity -->
+    <!--  Home  -->
     <string name="description_scroll_to_top_icon">위로 스크롤하는 아이콘 이미지</string>
     <string name="description_product_thumbnail">상품 썸네일 이미지</string>
     <string name="description_comment_icon">댓글 아이콘 이미지</string>
+
+    <!--  ProductDetail  -->
+    <string name="description_product_detail_image">상품 상세 이미지</string>
+    <string name="description_seller_profile_image">판매자 프로필 이미지</string>
+    <string name="description_manner_grade_icon">매너 온도 이모티콘</string>
+    <string name="format_manner_temperature">%.1f °C</string>
+    <string name="label_manner_temperature"><u>매너온도</u></string>
+    <string name="btn_label_chat">채팅하기</string>
+    <string name="message_add_interest_list">관심 목록에 추가되었습니다.</string>
+    <string name="message_remove_interest_list">관심 목록에서 삭제되었습니다.</string>
+    <string name="message_unknown_error">알 수 없는 에러 발생</string>
 
     <!-- Dummy Data -->
     <string name="data_product_01_title">산지 한달된 선풍기 팝니다</string>
