--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="message_remove_interest_list">관심 목록에서 삭제되었습니다.</string>
     <string name="message_unknown_error">알 수 없는 에러 발생</string>
     <string name="label_detail_toolbar_title">상품 상세</string>
+    <string name="description_detail_toolbar_icon">뒤로가기</string>
+    <string name="snackbar_no_notification">새로운 알림이 없습니다.</string>
 
 </resources>
